# agentaudit

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
examples/benign-skill/: SKILL.md  count.py
examples/malicious-skill/: SKILL.md  helper.py
src/agentaudit/: __init__.py  cli.py  rules.py  sarif.py  scanner.py
tests/: test_sarif.py  test_scanner.py
